# one-light

./: Cargo.toml  README.md
assets/humans/basic/export/: block-person.gltf
assets/materials/grass/: grass.ptex  grass.tres
assets/terrain/humans/prototype-human/: prototype-human.blend  prototype-human.blend1
assets/terrain/humans/prototype-human/export/: prototype-human.glb
assets/terrain/prototype-ground/: prototype-ground.blend  prototype-ground.blend1
src/: main.rs
