[package]
name = "one-light"
version = "0.1.0"
edition = "2021"

[features]
default = []
release = []
debug = ["bevy-inspector-egui", "colored", "bevy_flycam"]

[dependencies]
bevy = "0.6.1"
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.8", optional = true }
bevy_flycam = { version = "0.6.0", optional = true }
